src/styles/pages/_about.scss
.about{
  height: 100%;
  background-color: #efeee9;
  .triangles{
    .left{
      fill: #efeee9;
    }
    .right{
      fill: #eeebdf;
    }
  }
}

.about-description{
  width: 50%;
  height: 100%;
  background-color: #efeee9;
  padding: 20px;

  display: flex;
  justify-content: center;
}

.about-description__left, .about-description__right{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.about-description__left{
  flex-shrink: 1;
  width: 45%;
}

.about-description__right{
  flex-grow: 1;
  width: 55%;
}

.about-description__decoration{
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 350px;
  height: 120px;
  fill: #6d7070;
  fill-opacity: .06;
}

.about-description__main-title{
  position: relative;
  @include main-heading;
  padding-left: 35px;
  padding-right: 35px;
  &::before{
    left: 0px;
  }
  &::after{
    right: 0px;
  }
}

.about-description__photo{
  max-width: 400px;
  width: 100%;
  max-height: 400px;
  overflow: hidden;
  margin-bottom: 30px;

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.about-description__img{
  max-width: 100%;
  object-fit: cover;
}

.about-description__title{
  @include second-heading;
  margin-bottom: 5px;
}

.about-description__text{
  p{
    margin: 10px 0;
  }
}

.skills{
  width: 50%;
  height: 100%;
  background-color: #eeebdf;
  padding: 20px;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.skills__title{
  width: 40%;
  @include second-heading;
  padding-left: 30px;
  padding-right: 30px;
  margin-bottom: 30px;
}

.skills__description{
  padding: 0 15px;
  margin-bottom: 50px;
}

.skills-list{
  width: 100%;
  padding: 0 15px;
}

.skills-list__item{
  margin-bottom: 30px;
}

.skills-row{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.skills-row__title{
  @include medium-font(28px, 1.14);
  margin-bottom: 10px;
}

.skills-row__list{
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.skills-row__item{
  margin-right: 30px;
  &:last-child{
    margin-right: 0;
  }
}

.skill{
  width: 120px;
  height: 120px;
  padding: 20px;
  position: relative;

  display: flex;
  justify-content: center;
  align-items: center;
}

.skill__circle{
  position: absolute;
  left: 0;
  top: 0;

  width: 100%;
  height: 100%;
  border-radius: 50%; 
  background-color: $light-blue;
}

.skill__title{
  z-index: 1;
  color: $font-accent-color;
  text-align: center;
}

.map{
  width: 100%;
  height: 100vh;
  background-color: $bg-main-color;
  background-image: url('./../img/bg/map.jpg');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;

  display: flex;
  justify-content: center;
  align-items: center;
}

.contact{
  padding: 30px 35px;
  background-color: rgba(255, 255, 255, .85);
  margin-bottom: $footer-height;
  border-radius: 3px;

  display: flex;
  flex-direction: column;
  justify-content: center;
}

.contact__title{
  @include second-heading;
  padding-left: 30px;
  padding-right: 30px;
  margin-bottom: 30px;
  &::before{
    left: 30px;
  }
  &::after{
    right: 30px;
  }
}

.contact__item{
  margin-bottom: 20px;
  &:last-child{
    margin-bottom: 0;
  }
}

.contact__icon{
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  width: 25px;
  height: 25px;
  fill: $bg-main-color;
}

.contact__link{
  padding-left: 10px; 
  display: inline-block;
  vertical-align: middle;
  color: inherit;
}

